i descovered a major error in the code the wevsites's layout would break when switching from chrome to another browser such as safari I fixed this issue a process that rwquiered a significant amount of time rewriting large sections of the CSS code

--- a/static/analyses.css
+++ b/static/analyses.css
@@ -1,26 +1,19 @@
 body{
-    background-color: black;
+
     color:white;
+    background: linear-gradient(to bottom right,#d5ff3fab,black,black,black,black,black,#d5ff3fab);
+
     
+}
+html{
+     -webkit-text-size-adjust:100%;
 }
 *{
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
 }
-.light{
-    display: flex;
-    justify-self: self-end;
-    align-self: self-end;
-    position: fixed;
-    z-index: 9999;
-    background: linear-gradient(to bottom right,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),#d5ff3fab);
-    width: 100%;
-    height: 34em;
-    pointer-events: none;
-    inset: 0;
-    z-index:-1;
-}
+
 header{
     position:fixed;
     top:0;
@@ -180,7 +173,8 @@ img{
 
 .developer_score{
     width: 90%;
-    height: 45em;
+    min-height: 45em;
+    height: auto;
     border-radius: 20px;
     padding: 2.5em;
     margin:  5em 5%;
@@ -231,7 +225,8 @@ progress{
     border: 1px solid rgba(255, 255, 255, 0.192);
     background-color: rgba(255, 255, 255, 0.10);
     width: 46%;
-    height: 7em;
+    min-height: 7em;
+    height: auto;
     border-radius: 20px;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
@@ -306,5 +301,26 @@ progress{
     flex-direction: column;
     padding: 2em;
     width: 50%;
-    border: 2px solid greenyellow;
 }
+.ai_tips h1{
+    color: #d4ff3f;
+    opacity: 0.6;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 1em;
+}
+.p_summary{
+    margin-bottom: 2em;
+    font-size: 1.4em;
+    opacity: 0.7;
+}
+
+.ai_tips li{
+    font-size: 1.1em;
+    margin-bottom: 0.7em;
+    opacity: 0.8;
+}
+.ai_tips li::marker{
+    color: #d4ff3f;
+    font-size: 1.4em;
+}
+
